fix: Preserve white space

--- a/css/main.scss
+++ b/css/main.scss
@@ -1,6 +1,7 @@
 html,
 body {
     font-family: Inconsolata;
+    white-space: pre;
 }
 
 #letters {
